--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "image-renderer",
+  "name": "money-magnet-render",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sharp": "^0.33.2"
+    "express": "^4.19.2",
+    "cors": "^2.8.5"
   }
 }
